# finmars-workflow

./: .coveragerc  .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  director.py  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.yml  import-sql.sh  manage.py  migrate.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml  main.yml  other.yml  patch_release.yml  publish_version.yml  tests.yml
director/: __init__.py  _auto.py  cli.py  exceptions.py  extensions.py  settings.py  storage.py
director/api/: __init__.py  workflows.py
director/commands/: assets.py  celery.py
director/models/: tasks.py
director/static/: script.js
director/tasks/: base.py
director/templates/: index.html
docker/: finmars-job-run.sh  finmars-run.sh  uwsgi-www.ini
docker/supervisor/: celery.conf  celerybeat.conf  flower.conf
docs/: README.md   mkdocs.yml
docs/docs/: index.md
finmars_standardized_errors/: formatter.py  handler.py  middleware.py  models.py  openapi_hooks.py  openapi_utils.py  serializers.py  types.py  views.py
finmars_standardized_errors/migrations/: 0002_alter_errorrecord_options.py
healthcheck/: handlers.py  views.py
local-development/: run_cancel_existing_tasks.sh  run_celery.sh  run_celery_beat.sh  run_copy_css_libs.sh  run_copy_js_libs.sh  run_director.sh  run_generate_super_user.sh  run_makemigrations.sh  run_migrate.sh  run_server.sh  run_shell.sh  run_sync_remote_storage_to_local_storage_all_spaces.sh  run_tests.sh
logstash/: __init__.py  formatter.py  handler_tcp.py
workflow/: admin.py  api.py  apps.py  auth.py  authentication.py  builder.py  celery_workflow.py  cli.py  context_processors.py  fields.py  filters.py  finmars.py  finmars_authorizer.py  hashers.py  keycloak.py  middleware.py  models.py  monitoring.py  pagination.py  schedulers.py  serializers.py  storage.py  system.py  user_sessions.py  utils.py  views.py  workflows.py
workflow/api/: __init__.py  workflows.py
workflow/commands/: assets.py  celery.py  db.py  webserver.py  workflows.py
workflow/deprecated/: extensions.py
workflow/migrations/: 0001_initial.py  0002_celeryworker.py  0002_task_name.py  0003_task_previous_data.py  0003_task_worker_name.py  0004_task_is_hook.py  0004_workflow_platform_task_id.py  0005_alter_task_status_alter_workflow_status.py  0005_schedule_delete_celeryworker_alter_task_status_and_more.py  0006_user_is_bot.py  0006_workflow_crontab.py  0007_alter_workflow_options.py  0007_workflowtemplate.py  0008_workflow_user_code.py  0008_workflow_workflow_template.py  0009_task_finished_at.py  0009_workflow_node_id.py  0010_remove_workflow_project_alter_workflow_user_code.py  0010_task_node_id.py  0011_alter_task_source_code.py  0012_task_log.py  (+12 more)
workflow_app/: __init__.py  celery.py  gunicorn-dev.py  gunicorn-prod.py  gunicorn.py  openapi.py  settings.py  urls.py  utils.py  wsgi.py
(+45 files in other folders)
