[project]
name = "workflow"

[tool.isort]
profile="black"
py_version=310
known_django=["django", "django_celery_beat", "django_filters","rest_framework", "drf_spectacular", "factory", "corsheaders"]
sections=["FUTURE", "STDLIB", "DJANGO",  "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip=["__init__.py", ".gitignore"]
skip_glob=["venv/*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
lint.select = ["E4", "E7", "E9", "C90", "C901", "W"]
lint.ignore = ["E501", "F405", "W605"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
