[project]
name = "finmars-workflow"
version = "1.22.0"

[tool.ruff]
  line-length = 119
  indent-width = 4
  target-version = "py312"
  extend-exclude = [
    "setup.py",
    "**/migrations/*.py",
    "**/settings.py",
  ]

[tool.ruff.lint]
  select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "PL",   # Pylint
  ]
  ignore = [
    "SIM108",   # Use ternary operator
    "SIM102",   # Use a single if statement instead of nested if statements
    "PLR2004",  # Magic value used in comparison, consider replacing 201 with a constant variable
  ]

[tool.ruff.lint.flake8-quotes]
  inline-quotes = "double"

[tool.ruff.lint.pylint]
  max-args = 20
  max-positional-args = 20
  max-branches = 15

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
source = ["workflow"]

[tool.coverage.report]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
title = "Finmars Backend Coverage Report"

[tool.mypy]
exclude = '(?x)(tests.+\.py$)'
python_version = "3.12"
mypy_path = "workflow"    # set base folder for mypy to look for modules
packages = ["workflow", "workflow_app"]   # specify which packages to check
warn_no_return = true         # disallow functions without return statement
warn_redundant_casts = true   # disallow redundant type casts
warn_unreachable = true       # disallow unreachable code (e.g. code after return statement)
warn_unused_configs = true    # disallow per-module sections that does not match any file
warn_unused_ignores = true    # disallow redundant type ignores
disallow_untyped_defs = false # allow untyped functions for now
no_implicit_optional = true   # optional must be specified explicitly
show_error_codes = true       # show type error code in mypy output

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "celery.*",
  "rest_framework.*",
  "django_filters.*",
  "django.*",
  "requests.*",
  "pandas.*",
  "flatten_json.*",
  "django_celery_beat.*",
  "storages.*",
  "pluginbase.*",
  "jsonschema.*",
  "pytz.*",
  "croniter.*",
  "yaml.*",
  "debug_toolbar.*",
  "drf_yasg.*",
]
